# logscope

./: .clang-format  .editorconfig  .gitattributes  .gitignore  .lcovrc  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  test-report.properties
apps/cli/: CMakeLists.txt  LogAnalyzer.cpp  LogAnalyzer.hpp  README.md  analytics_command.cpp  analytics_command.hpp  analytics_output.cpp  analytics_output.hpp  analyze_command.cpp  analyze_command.hpp  cli_analysis_config.cpp  cli_analysis_config.hpp  cli_application.cpp  cli_application.hpp  cli_config.cpp  cli_config.hpp  cli_parser.cpp  cli_parser.hpp  config_validate_command.cpp  config_validate_command.hpp  extensions_command.cpp  extensions_command.hpp  investigate_command.cpp  investigate_command.hpp  investigation_output.cpp  investigation_output.hpp  log_analyzer.cpp  log_analyzer.hpp  main.cpp  output_format.cpp  output_format.hpp  query_command.cpp  query_command.hpp  report_config.cpp  report_config.hpp  report_output.cpp  report_output.hpp  report_writer.cpp  report_writer.hpp  search_command.cpp  (+3 more)
core/: CMakeLists.txt  README.md
core/analysis/: CMakeLists.txt  README.md  analysis.hpp  analysis_config.cpp  analysis_config.hpp  analysis_engine.cpp  analysis_engine.hpp  analysis_model.cpp  analysis_model.hpp  correlation_id_extractor.cpp  correlation_id_extractor.hpp  field_summary.cpp  field_summary.hpp  format_detector.cpp  format_detector.hpp  format_parser.cpp  format_parser.hpp  hybrid_index_writer.cpp  hybrid_index_writer.hpp  indexed_line_access.cpp  indexed_line_access.hpp  json_field_mapping.cpp  json_field_mapping.hpp  json_lines_parser.cpp  json_lines_parser.hpp  json_lines_summary.cpp  json_lines_summary.hpp  line_index.cpp  line_index.hpp  log_format.cpp  log_format.hpp  log_level_counts.cpp  log_level_counts.hpp  log_line_classifier.cpp  log_line_classifier.hpp  plain_text_field_extractor.cpp  plain_text_field_extractor.hpp
core/analytics/: CMakeLists.txt  README.md  analytics.hpp  analytics_config.hpp  analytics_engine.cpp  analytics_engine.hpp  analytics_result.cpp  analytics_result.hpp  correlation_analyzer.cpp  correlation_analyzer.hpp  correlation_result.cpp  correlation_result.hpp  error_cluster.cpp  error_cluster.hpp  error_clusterer.cpp  error_clusterer.hpp  frequency_analyzer.cpp  frequency_analyzer.hpp  frequency_result.cpp  frequency_result.hpp  message_signature.cpp  message_signature.hpp  timeline_analyzer.cpp  timeline_analyzer.hpp  timeline_result.cpp  timeline_result.hpp  trend_analyzer.cpp  trend_analyzer.hpp  trend_result.cpp  trend_result.hpp
core/configuration/: CMakeLists.txt  README.md  configuration.hpp  configuration_manager.cpp  configuration_manager.hpp
core/extension/: CMakeLists.txt  README.md  builtin_extensions.cpp  extension.hpp  extension_descriptor.hpp  extension_info.hpp  extension_manager.cpp  extension_manager.hpp
core/foundation/: CMakeLists.txt  README.md  clock.cpp  clock.hpp  date.cpp  date.hpp  date.inl  datetime.cpp  datetime.hpp  datetime.inl  duration.cpp  duration.hpp  duration.inl  error.cpp  error.hpp  filesystem.cpp  filesystem.hpp  foundation.hpp  hash.cpp  hash.hpp  path.cpp  path.hpp  random.cpp  random.hpp  result.hpp  result.inl  status.hpp  stopwatch.cpp  stopwatch.hpp  string.cpp  string.hpp  time.cpp  time.hpp  time.inl  timestamp.cpp  timestamp.hpp  timestamp.inl  uuid.cpp  uuid.hpp  version.cpp  (+2 more)
core/investigation/: CMakeLists.txt  README.md  correlation_summary.cpp  correlation_summary.hpp  field_filter.cpp  field_filter.hpp  investigation.hpp  investigation_criteria.cpp  investigation_criteria.hpp  investigation_engine.cpp  investigation_engine.hpp  investigation_result.hpp  investigation_view.cpp  investigation_view.hpp  line_count_filter.cpp  line_count_filter.hpp  log_level_filter.cpp  log_level_filter.hpp  time_range_filter.cpp  time_range_filter.hpp
core/query/: CMakeLists.txt  README.md  query.hpp  query_config.cpp  query_config.hpp  query_evaluator.cpp  query_evaluator.hpp  query_node.cpp  query_node.hpp  query_parser.cpp  query_parser.hpp  query_value.cpp  query_value.hpp
core/reporting/: CMakeLists.txt  README.md  ascii_chart_renderer.cpp  ascii_chart_renderer.hpp  chart_model.cpp  chart_model.hpp  format_renderer.cpp  format_renderer.hpp  minimal_pdf_writer.cpp  minimal_pdf_writer.hpp  report.cpp  report.hpp  report_analytics_sections.cpp  report_builtin_sections.cpp  report_contributors.cpp  report_format.cpp  report_format.hpp  report_formatter.cpp  report_formatter.hpp  report_fragment.cpp  report_fragment.hpp  report_generator.cpp  report_generator.hpp  report_options.cpp  report_options.hpp  report_section.cpp  report_section.hpp  report_section_contributor.hpp  report_section_renderer.cpp  report_section_renderer.hpp  report_string_utils.cpp  report_string_utils.hpp  reporting.hpp  svg_chart_renderer.cpp  svg_chart_renderer.hpp
core/runtime/: CMakeLists.txt  README.md  configuration.cpp  configuration.hpp  diagnostics.cpp  diagnostics.hpp  log_macros.hpp  plugin_registry.cpp  plugin_registry.hpp  runtime.hpp  service_registry.cpp  service_registry.hpp
core/search/: CMakeLists.txt  README.md  search.hpp  search_config.cpp  search_config.hpp  search_engine.cpp  search_engine.hpp  search_history.cpp  search_history.hpp  search_query.cpp  search_query.hpp  search_query_parser.cpp  search_query_parser.hpp  text_matcher.cpp  text_matcher.hpp
core/source/: CMakeLists.txt  README.md  composite_log_source.cpp  composite_log_source.hpp  file_log_source.cpp  file_log_source.hpp  log_source.hpp  source.hpp  source_dataset.cpp  source_dataset.hpp  source_manager.cpp  source_manager.hpp  stdin_log_source.cpp  stdin_log_source.hpp
core/storage/: CMakeLists.txt  README.md  index_fingerprint.cpp  index_fingerprint.hpp  index_reader.cpp  index_reader.hpp  index_store.hpp  index_store_factory.cpp  index_store_factory.hpp  query_planner.cpp  query_planner.hpp  schema_version.cpp  schema_version.hpp  sqlite_index_store.cpp  sqlite_index_store.hpp  storage.hpp  storage_config.cpp  (+3 more)
tests/: CMakeLists.txt  README.md
(+193 files in other folders)
