# ==========================================================
# LogScope
# Core
# ==========================================================

add_subdirectory(foundation)
add_subdirectory(runtime)
add_subdirectory(configuration)
add_subdirectory(source)
add_subdirectory(analysis)
add_subdirectory(investigation)
add_subdirectory(reporting)
