# ==========================================================
# LogScope
# Core
# ==========================================================

add_subdirectory(foundation)
add_subdirectory(runtime)
add_subdirectory(configuration)
add_subdirectory(source)
add_subdirectory(analysis)
add_subdirectory(search)
add_subdirectory(query)
add_subdirectory(analytics)
add_subdirectory(investigation)
add_subdirectory(reporting)
add_subdirectory(extension)
add_subdirectory(workspace)
